--- a/package.json
+++ b/package.json
@@ -2,13 +2,19 @@
   "name": "camper",
   "version": "1.0.0",
   "description": "Be notified of page updates",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "crawler": "^1.3.0"
+    "crawler": "^1.3.0",
+    "dotenv": "^8.2.0",
+    "nodemailer": "^6.4.16"
+  },
+  "devDependencies": {
+    "@types/nodemailer": "^6.4.0",
+    "typescript": "^4.1.2"
   }
 }
