--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Be notified of page updates",
   "main": "src/index.js",
   "scripts": {
+    "start": "node index.js",
+    "start-dev": "node -r dotenv/config index.js dotenv_config_path=./profiles/dev.env",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -11,6 +13,7 @@
   "dependencies": {
     "crawler": "^1.3.0",
     "dotenv": "^8.2.0",
+    "mysql": "^2.18.1",
     "nodemailer": "^6.4.16"
   },
   "devDependencies": {
