--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
   flyway:
     image: flyway/flyway
-    command: -url=jdbc:mysql://userdb -schemas=userdb -user=root -password=P@ssw0rd -connectRetries=60 migrate
+    command: -url=jdbc:mysql://userdb -schemas=userdb -user=root -password=password -connectRetries=60 migrate
     volumes:
       - ./flyway_scripts:/flyway/sql
     networks: 
@@ -12,7 +12,7 @@ services:
   userdb:
     image: mysql
     environment:
-      - MYSQL_ROOT_PASSWORD=P@ssw0rd
+      - MYSQL_ROOT_PASSWORD=password
     command: --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
     ports:
       - 3307:3306
